[package]
authors = ["Human Enginuity <hello@humanenginuity.com>"]
description = "A static (compile-time) validation library for Rust"
documentation = "https://github.com/humanenginuity/assayer/blob/master/README.md"
homepage = "https://github.com/humanenginuity/assayer"
keywords = [
    "validator",
    "validation",
    "input_validator",
    "input_validation",
    "fluent_validator",
]
license = "Apache-2.0/MIT"
name = "assayer"
readme = "README.md"
repository = "https://github.com/humanenginuity/assayer"
version = "0.2.2"

[badges]

[dependencies]
error_def = "0.3.14"
[profile.release]
lto = true
opt-level = 3
